camel-k/2.11.x/kamelets/distribution.md
# Kamelets Distribution

The Camel K opinionated way of Kamelets distribution is to expect them available on the cluster. You typically develop a Kamelet and then release it in the Integration namespace or the operator namespace. Alternatively you can also deliver them into any other namespace.

There is not a prescribed way how to release the Kamelets on the cluster. It can vary based on each company process. What’s important for the operator, is that they are available when running the Integrations.

## Apache Kamelets catalog

When you install Camel K, you may want a series of Kamelets which are coming from the [Apache Kamelet Catalog](../../../camel-kamelets/4.22.x/index.md). This is a facility that will let you immediately use a wide set of connector-style resources to interact with any event source and sink.

You can install any catalog version available by downloading locally the catalog and installing to the cluster. For example, this script download a given version of the catalog and install into the `camel-k` namespace:

```none
mvn -q dependency:copy -Dartifact=org.apache.camel.kamelets:camel-kamelets:4.18.0:jar -Dmdep.useBaseVersion=true -DoutputDirectory=/tmp
unzip /tmp/camel-kamelets-4.18.1.jar -d /tmp && kubectl apply -f /tmp/kamelets -n camel-k
```

> **Note**
> you can install any other custom catalog in a similar manner.

## Kamelets as a dependency

You may find situations where you want to bundle a Kamelet in a dependency (ie, one or more external catalog containing the Kamelets spec) and use the same approach of distributing Kamelets as done in Camel core. As Kamelets are a Camel thing, then, you can use such dependency and let the runtime use the Kamelets available in the classpath. As an example, you will be able to run:

```bash
kamel bind my-source log-sink -d github:squakez/acme-kamelets-catalog -d camel:timer
```

If you use this approach you will need to provide the Integration all the dependencies used in your Kamelet spec as the operator is not able to scan the Kamelet spec.